convert persisted diagnosis keys